# uGamePad

./: .gitmodules  BUILDINFO.md  CMakeLists.txt  README.md  platformio.ini
data/: gamepad-64x43.xcf  gamepad-90x60.xcf
src/: EepromManager.cpp  HIDController.cpp  HIDController.h  Profile.h  USB2DB15.cpp  clock.cpp  config.cpp  config.h  controller_enums.h  debug.h  devices.c  devices.cpp  devices.h  fs.cpp  fs.h  game_controller.cpp  game_controller.h  game_controller_data.h  game_controller_desc.h  game_controller_enums.h  gamepad.cpp  gamepad.h  gamepad_data.h  gfx.cpp  gfx.h  hid.cpp  hid.h  hid_app.cpp  hid_utility.cpp  hid_utility.h  hidparser.cpp  hidparser.h  led.cpp  led.h  main.cpp  main.h  platform.cpp  platform.h  spash.cpp  tiny_hid.cpp  (+10 more)
src/UsbHost/: Usb.cpp  Usb.h  UsbCore.h  address.h
src/fatfs/: ffconf.h
src/linux/: linux_display.cpp  linux_display.h  linux_flash.cpp  linux_flash.h  linux_fs.cpp  linux_fs.h  linux_gamepad.cpp  linux_gamepad.h  linux_gfx.cpp  linux_gfx.h  linux_hid.cpp  linux_hid.h  linux_main.cpp  linux_platform.cpp  linux_platform.h  linux_ui.cpp  linux_ui.h
src/linux/Adafruit_GFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GFX_dummy_display.cpp  Adafruit_GFX_dummy_display.h  Arduino.h
src/pico/: hid.cpp  led.cpp  led.h  pico_display.cpp  pico_display.h  pico_flash.cpp  pico_flash.h  pico_fs.cpp  pico_fs.h  pico_gamepad.cpp  pico_gamepad.h  pico_gfx.cpp  pico_gfx.h  pico_hid.cpp  pico_hid.h  pico_platform.cpp  pico_platform.h  pico_ui.cpp  pico_ui.h  tusb_config.h  usb_descriptors.c
src/pico/fat12/: ff_format.cpp  ff_format.h
src/ui/: bitmaps.cpp  bitmaps.h  gamepad_info.cpp  gamepad_info.h  gamepad_settings.cpp  gamepad_settings.h  gfx.cpp  gfx.h  line.cpp  line.h  menu.cpp  menu.h  menu_line.cpp  menu_line.h  profiles.cpp  profiles.h  rectangle.cpp  rectangle.h  remap.cpp  remap.h  spash.cpp  system_info.cpp  system_info.h  text.cpp  text.h  triangle.cpp  triangle.h  ui.cpp  ui.h  widget.cpp  widget.h
src/ui/widgets/: bitmap.cpp  bitmap.h  circle.cpp  circle.h  line.cpp  line.h  messagebox.cpp  messagebox.h  particles.cpp  particles.h  rectangle.cpp  rectangle.h  starfield.cpp  starfield.h  text.cpp  text.h  triangle.cpp  triangle.h  widget.cpp  widget.h
src/utility/: clock.cpp  clock.h  clock_time.cpp  clock_time.h  json.cpp  json.h  utility.cpp  utility.h
tools/: picoprobe_xiao_samd21.cfg
